fix: simplify CORS configuration to fix 403 error